[gd_scene load_steps=14 format=3 uid="uid://f4ie0ytcicf0"]

[ext_resource type="Script" uid="uid://dwepw5abso8f1" path="res://addons/signal_lens/editor/signal_lens_editor_panel.gd" id="1_abwge"]
[ext_resource type="Script" uid="uid://dpn0ev0370mga" path="res://addons/signal_lens/editor/logger.gd" id="3_v6bl3"]
[ext_resource type="Texture2D" uid="uid://brdnqivcfnsun" path="res://addons/signal_lens/icons/icon_logo.png" id="6_wrl4d"]

[sub_resource type="SVGTexture" id="SVGTexture_v6bl3"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><path fill=\"#e0e0e0\" d=\"m2 2v2h2v-2zm4 0v2h8v-2zm-4 5v2h2v-2zm4 0v2h8v-2zm-4 5v2h2v-2zm4 0v2h8v-2z\"/></svg>
"
saturation = 2.0
color_map = {
Color(1, 0.37254903, 0.37254903, 1): Color(1, 0.47, 0.42, 1),
Color(0.37254903, 1, 0.5921569, 1): Color(0.45, 0.95, 0.5, 1),
Color(1, 0.8666667, 0.39607844, 1): Color(1, 0.87, 0.4, 1)
}

[sub_resource type="SVGTexture" id="SVGTexture_qib1m"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><path fill=\"#e0e0e0\" d=\"m8 1a1 1 0 0 0 -1 1v5h-2c-1.108 0-2 .892-2 2v1h10v-1c0-1.108-.892-2-2-2h-2v-5a1 1 0 0 0 -1-1zm-5 10v4l10-1v-3z\"/></svg>
"
saturation = 2.0
color_map = {
Color(1, 0.37254903, 0.37254903, 1): Color(1, 0.47, 0.42, 1),
Color(0.37254903, 1, 0.5921569, 1): Color(0.45, 0.95, 0.5, 1),
Color(1, 0.8666667, 0.39607844, 1): Color(1, 0.87, 0.4, 1)
}

[sub_resource type="SVGTexture" id="SVGTexture_kqale"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><path fill=\"#e0e0e0\" d=\"M5 8a4 4 0 1 1 4 4v2a6 6 0 1 0-6-6H1l3 4 3-4z\"/></svg>
"
saturation = 2.0
color_map = {
Color(1, 0.37254903, 0.37254903, 1): Color(1, 0.47, 0.42, 1),
Color(0.37254903, 1, 0.5921569, 1): Color(0.45, 0.95, 0.5, 1),
Color(1, 0.8666667, 0.39607844, 1): Color(1, 0.87, 0.4, 1)
}

[sub_resource type="SVGTexture" id="SVGTexture_4h13t"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><path fill=\"#e0e0e0\" d=\"m4 1v1l1 1v3h6v-3l1-1v-1zm1 6-2 3h10l-2-3zm2 4v2l1 2 1-2v-2z\"/></svg>
"
saturation = 2.0
color_map = {
Color(1, 0.37254903, 0.37254903, 1): Color(1, 0.47, 0.42, 1),
Color(0.37254903, 1, 0.5921569, 1): Color(0.45, 0.95, 0.5, 1),
Color(1, 0.8666667, 0.39607844, 1): Color(1, 0.87, 0.4, 1)
}

[sub_resource type="SVGTexture" id="SVGTexture_vbdfx"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><path fill=\"#e0e0e0\" d=\"m5 1c-1.108 0-2 .89199-2 2v1h4v-1h2v1h4v-1c0-1.108-.89199-2-2-2zm-2 5c-1.108 0-2 .89199-2 2v5c0 1.108.89199 2 2 2h10c1.108 0 2-.89199 2-2v-5c0-1.108-.89199-2-2-2h-4v3h2l-3 4-3-4h2v-3z\"/></svg>
"
saturation = 2.0
color_map = {
Color(1, 0.37254903, 0.37254903, 1): Color(1, 0.47, 0.42, 1),
Color(0.37254903, 1, 0.5921569, 1): Color(0.45, 0.95, 0.5, 1),
Color(1, 0.8666667, 0.39607844, 1): Color(1, 0.87, 0.4, 1)
}

[sub_resource type="SVGTexture" id="SVGTexture_dyx7v"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><path fill=\"#e0e0e0\" d=\"M3 1a1 1 0 0 0-1 1c0 1.5.967 2.625 1.873 3.66.76.87 1.416 1.643 1.875 2.34-.459.697-1.114 1.472-1.875 2.342C2.967 11.377 2 12.5 2 14a1 1 0 0 0 1 1h10a1 1 0 0 0 1-1c0-1.5-.967-2.623-1.873-3.658-.76-.87-1.416-1.645-1.875-2.342.459-.697 1.114-1.47 1.875-2.34C13.033 4.625 14 3.5 14 2a1 1 0 0 0-1-1zm8.412 2c-.238.44-.305.79-.789 1.342-.844.964-1.898 1.972-2.518 3.21A1 1 0 0 0 8 8a1 1 0 0 0-.106-.447c-.619-1.239-1.673-2.247-2.517-3.211-.484-.553-.551-.901-.79-1.342z\"/></svg>
"
saturation = 2.0
color_map = {
Color(1, 0.37254903, 0.37254903, 1): Color(1, 0.47, 0.42, 1),
Color(0.37254903, 1, 0.5921569, 1): Color(0.45, 0.95, 0.5, 1),
Color(1, 0.8666667, 0.39607844, 1): Color(1, 0.87, 0.4, 1)
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v6bl3"]
bg_color = Color(0.0177324, 0.0177324, 0.0177324, 0.497)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="LabelSettings" id="LabelSettings_v6bl3"]
font_size = 13

[sub_resource type="SVGTexture" id="SVGTexture_c4iiw"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><path fill=\"#e0e0e0\" d=\"M2 1a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h1V3h9V2a1 1 0 0 0-1-1zm3 3a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1zm1 2h7v7H6z\"/></svg>
"
saturation = 2.0
color_map = {
Color(1, 0.37254903, 0.37254903, 1): Color(1, 0.47, 0.42, 1),
Color(0.37254903, 1, 0.5921569, 1): Color(0.45, 0.95, 0.5, 1),
Color(1, 0.8666667, 0.39607844, 1): Color(1, 0.87, 0.4, 1)
}

[sub_resource type="StyleBoxLine" id="StyleBoxLine_v6bl3"]
color = Color(0.244776, 0.244776, 0.244776, 1)

[node name="Signal Lens" type="Control" node_paths=PackedStringArray("graph_edit", "logger_button", "node_path_line_edit", "refresh_button", "clear_button", "inactive_text", "warning_text", "pin_checkbox", "keep_emissions_checkbox", "emission_speed_slider", "emission_speed_icon", "logger")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_abwge")
graph_edit = NodePath("EditorPanel/GraphEdit")
logger_button = NodePath("EditorPanel/MainButtonsContainer/HBoxContainer2/LoggerButton")
node_path_line_edit = NodePath("EditorPanel/MainButtonsContainer/HBoxContainer2/NodePathLineEdit")
refresh_button = NodePath("EditorPanel/MainButtonsContainer/HBoxContainer2/RefreshButton")
clear_button = NodePath("EditorPanel/MainButtonsContainer/HBoxContainer2/ClearButton")
inactive_text = NodePath("EditorPanel/InactiveTextContainer/InactiveText")
warning_text = NodePath("EditorPanel/WarningTextContainer/WarningText")
pin_checkbox = NodePath("EditorPanel/MainButtonsContainer/HBoxContainer2/PinCheckbox")
keep_emissions_checkbox = NodePath("EditorPanel/MainButtonsContainer/HBoxContainer2/KeepEmissionsCheckbox")
emission_speed_slider = NodePath("EditorPanel/MainButtonsContainer/HBoxContainer2/EmissionSpeedContainer/EmissionSpeedSlider")
emission_speed_icon = NodePath("EditorPanel/MainButtonsContainer/HBoxContainer2/EmissionSpeedContainer/EmissionSpeedIcon")
logger = NodePath("EditorPanel/Logger")

[node name="EditorPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GraphEdit" type="GraphEdit" parent="EditorPanel"]
layout_mode = 2
grid_pattern = 1
connection_lines_thickness = 3.0
zoom = 0.3
minimap_size = Vector2(120, 80)
show_zoom_label = true
show_grid_buttons = false

[node name="MainButtonsContainer" type="MarginContainer" parent="EditorPanel"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_constants/margin_left = 10
theme_override_constants/margin_bottom = 15

[node name="HBoxContainer2" type="HBoxContainer" parent="EditorPanel/MainButtonsContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="LoggerButton" type="Button" parent="EditorPanel/MainButtonsContainer/HBoxContainer2"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
toggle_mode = true
icon = SubResource("SVGTexture_v6bl3")

[node name="VSeparator" type="VSeparator" parent="EditorPanel/MainButtonsContainer/HBoxContainer2"]
layout_mode = 2

[node name="ClearButton" type="Button" parent="EditorPanel/MainButtonsContainer/HBoxContainer2"]
layout_mode = 2
tooltip_text = "Clear Button
Clear the graph."
disabled = true
icon = SubResource("SVGTexture_qib1m")

[node name="RefreshButton" type="Button" parent="EditorPanel/MainButtonsContainer/HBoxContainer2"]
layout_mode = 2
tooltip_text = "Refresh Button
Redraw the graph."
disabled = true
icon = SubResource("SVGTexture_kqale")

[node name="PinCheckbox" type="CheckButton" parent="EditorPanel/MainButtonsContainer/HBoxContainer2"]
layout_mode = 2
tooltip_text = "Pin This Node
If toggled on, ignores any new selections made in the remote scene."
disabled = true
icon = SubResource("SVGTexture_4h13t")

[node name="NodePathLineEdit" type="LineEdit" parent="EditorPanel/MainButtonsContainer/HBoxContainer2"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
tooltip_text = "Node Path
Node path for the node that is currently selected in the remote scene."
text = "/root"
editable = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
select_all_on_focus = true

[node name="KeepEmissionsCheckbox" type="CheckButton" parent="EditorPanel/MainButtonsContainer/HBoxContainer2"]
layout_mode = 2
tooltip_text = "Keep emissions
If toggled on, keeps any received signal emissions drawn in the graph.
When toggled off, drawn signal emissions will fade out."
disabled = true
icon = SubResource("SVGTexture_vbdfx")

[node name="EmissionSpeedContainer" type="HBoxContainer" parent="EditorPanel/MainButtonsContainer/HBoxContainer2"]
layout_mode = 2
tooltip_text = "Emission Speed
Controls the speed of the fade out of signal emissions.
Left means means quick, right means long."

[node name="EmissionSpeedIcon" type="Button" parent="EditorPanel/MainButtonsContainer/HBoxContainer2/EmissionSpeedContainer"]
layout_mode = 2
mouse_filter = 2
disabled = true
icon = SubResource("SVGTexture_dyx7v")
flat = true

[node name="EmissionSpeedSlider" type="HSlider" parent="EditorPanel/MainButtonsContainer/HBoxContainer2/EmissionSpeedContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 1
min_value = 0.3
max_value = 6.0
step = 0.1
value = 1.0
editable = false

[node name="InactiveTextContainer" type="PanelContainer" parent="EditorPanel"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2

[node name="InactiveText" type="Label" parent="EditorPanel/InactiveTextContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Play project to start debugging"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WarningTextContainer" type="PanelContainer" parent="EditorPanel"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2

[node name="WarningText" type="Label" parent="EditorPanel/WarningTextContainer"]
visible = false
modulate = Color(0.996567, 0.82419, 0.525376, 1)
layout_mode = 2
size_flags_horizontal = 4
horizontal_alignment = 1
vertical_alignment = 1

[node name="RepoButtonContainer" type="MarginContainer" parent="EditorPanel"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
mouse_filter = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15

[node name="RepoButton" type="Button" parent="EditorPanel/RepoButtonContainer"]
texture_filter = 4
custom_minimum_size = Vector2(145.04, 40)
layout_mode = 2
tooltip_text = "Click to access the plugin's repository on Github.
Submit issues, consult documentation and contribute!"
icon = ExtResource("6_wrl4d")
flat = true
icon_alignment = 1
vertical_icon_alignment = 2
expand_icon = true

[node name="Logger" type="MarginContainer" parent="EditorPanel" node_paths=PackedStringArray("log_container", "copy_button", "clear_button", "v_split_container", "h_split_container", "log_scroll", "counter_label")]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 2
theme_override_constants/margin_top = 55
theme_override_constants/margin_bottom = 55
script = ExtResource("3_v6bl3")
log_container = NodePath("VSplitContainer/HSplitContainer/Panel/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/LogContainer")
copy_button = NodePath("VSplitContainer/HSplitContainer/Panel/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/CopyButton")
clear_button = NodePath("VSplitContainer/HSplitContainer/Panel/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ClearButton")
v_split_container = NodePath("VSplitContainer")
h_split_container = NodePath("VSplitContainer/HSplitContainer")
log_scroll = NodePath("VSplitContainer/HSplitContainer/Panel/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer")
counter_label = NodePath("VSplitContainer/HSplitContainer/Panel/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/CounterLabel")

[node name="VSplitContainer" type="VSplitContainer" parent="EditorPanel/Logger"]
layout_mode = 2
drag_area_margin_end = 130

[node name="Control" type="Control" parent="EditorPanel/Logger/VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HSplitContainer" type="HSplitContainer" parent="EditorPanel/Logger/VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3
split_offset = -130

[node name="Panel" type="MarginContainer" parent="EditorPanel/Logger/VSplitContainer/HSplitContainer"]
custom_minimum_size = Vector2(260, 150)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="PanelContainer" type="PanelContainer" parent="EditorPanel/Logger/VSplitContainer/HSplitContainer/Panel"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_v6bl3")

[node name="MarginContainer" type="MarginContainer" parent="EditorPanel/Logger/VSplitContainer/HSplitContainer/Panel/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="EditorPanel/Logger/VSplitContainer/HSplitContainer/Panel/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="EditorPanel/Logger/VSplitContainer/HSplitContainer/Panel/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="EditorPanel/Logger/VSplitContainer/HSplitContainer/Panel/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Signal Log"
label_settings = SubResource("LabelSettings_v6bl3")

[node name="CounterLabel" type="Label" parent="EditorPanel/Logger/VSplitContainer/HSplitContainer/Panel/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
modulate = Color(0.501407, 0.501406, 0.501406, 1)
layout_mode = 2
size_flags_horizontal = 3
label_settings = SubResource("LabelSettings_v6bl3")
horizontal_alignment = 2

[node name="CopyButton" type="Button" parent="EditorPanel/Logger/VSplitContainer/HSplitContainer/Panel/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
icon = SubResource("SVGTexture_c4iiw")
flat = true

[node name="ClearButton" type="Button" parent="EditorPanel/Logger/VSplitContainer/HSplitContainer/Panel/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
icon = SubResource("SVGTexture_qib1m")
flat = true

[node name="HSeparator" type="HSeparator" parent="EditorPanel/Logger/VSplitContainer/HSplitContainer/Panel/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_v6bl3")

[node name="ScrollContainer" type="ScrollContainer" parent="EditorPanel/Logger/VSplitContainer/HSplitContainer/Panel/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LogContainer" type="VBoxContainer" parent="EditorPanel/Logger/VSplitContainer/HSplitContainer/Panel/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 13

[node name="Control" type="Control" parent="EditorPanel/Logger/VSplitContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 8

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="node_deselected" from="EditorPanel/GraphEdit" to="." method="_on_graph_edit_node_deselected"]
[connection signal="node_selected" from="EditorPanel/GraphEdit" to="." method="_on_graph_edit_node_selected"]
[connection signal="toggled" from="EditorPanel/MainButtonsContainer/HBoxContainer2/LoggerButton" to="." method="_on_logger_button_toggled"]
[connection signal="pressed" from="EditorPanel/MainButtonsContainer/HBoxContainer2/ClearButton" to="." method="_on_clear_button_pressed"]
[connection signal="pressed" from="EditorPanel/MainButtonsContainer/HBoxContainer2/RefreshButton" to="." method="_on_refresh_button_pressed"]
[connection signal="toggled" from="EditorPanel/MainButtonsContainer/HBoxContainer2/PinCheckbox" to="." method="_on_pin_checkbox_toggled"]
[connection signal="toggled" from="EditorPanel/MainButtonsContainer/HBoxContainer2/KeepEmissionsCheckbox" to="." method="_on_keep_emissions_checkbox_toggled"]
[connection signal="value_changed" from="EditorPanel/MainButtonsContainer/HBoxContainer2/EmissionSpeedContainer/EmissionSpeedSlider" to="." method="_on_emission_speed_slider_value_changed"]
[connection signal="pressed" from="EditorPanel/RepoButtonContainer/RepoButton" to="." method="_on_repo_button_pressed"]
[connection signal="dragged" from="EditorPanel/Logger/VSplitContainer/HSplitContainer" to="EditorPanel/Logger" method="_on_h_split_container_dragged"]
[connection signal="pressed" from="EditorPanel/Logger/VSplitContainer/HSplitContainer/Panel/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/CopyButton" to="EditorPanel/Logger" method="_on_copy_button_pressed"]
[connection signal="pressed" from="EditorPanel/Logger/VSplitContainer/HSplitContainer/Panel/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ClearButton" to="EditorPanel/Logger" method="_on_clear_button_pressed"]
